@@ -1,5 +1,10 @@
 2013-02-01  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
+	* build-all.sh: Add option to control building of unified source
+	tree.
+
+2013-02-01  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
 	* dejagnu/baseboards/arc-linux-aa4.exp: Break out the generic
 	Linux setup into its own file, specify target in environment variable.
 	* dejagnu/baseboards/arc-linux-generic.exp: Generic set up shared
